--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "aos": "^2.3.4",
     "mapbox-gl": "^2.5.1",
     "react": "^17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
+    "react-responsive-accordion": "^1.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
