--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "toroto-oct",
   "version": "0.1.0",
+  "homepage": "https://maranyil.github.io/toroto-oct/",
+  "author": "Mara Mulato",
   "private": true,
   "dependencies": {
     "@mapbox/geojson-area": "^0.2.2",
@@ -8,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
+    "gh-pages": "^3.2.3",
     "mapbox-gl": "^2.5.1",
     "react": "^17.0.2",
     "react-collapsible": "^2.8.4",
@@ -16,9 +19,12 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
